---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2021-01-21
  Changes:
    - tooltip for categories
    - settings for presentator
  Bugfixes:
    - fixing crash when clicking on steam
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2021-01-20
  Changes:
    - localisation improved: text styles
    - providing better information on technology effets panel
    - [tech] using __debugline 
  Bugfixes:
    - fixing crash clicking on lab in technology panel header
    - fixing crash "Too many parameters for localised string: 22 > 20 (limit). in property tree at ROOT.tooltip[2]"
    - fixing crash when for a recipe ingredients or products are not unique
---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2021-01-18
  Changes:
    - [tech] changing assert into dassert, then debugger version
  Bugfixes:
    - fixing crash when PickerTweaks enabled
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2021-01-18
  Bugfixes:
    - instrumenting for crash: "Gui element with name Item.glassworks-mk01 already present in the parent element." (not fixed yet)
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2021-01-18
  Bugfixes:
    - fixing crash: "Error while applying migration: ingteb: 0.3.1.lua"
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2021-01-18
  Bugfixes:
    - fixing crash: " no such file ingteb/ingteb/ingteb/remindortask.lua no such file" (hopefully, since on Windows I cannot reproduce)
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2021-01-18
  Changes: